tests/baselines/reference/objectTypeWithStringNamedPropertyOfIllegalCharacters(strict=true).errors.txt
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(10,9): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(11,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(11,12): error TS2551: Property '    ' does not exist on type 'C'. Did you mean '   '?
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(12,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(14,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(23,9): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(24,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(24,12): error TS2551: Property '    ' does not exist on type 'I'. Did you mean '   '?
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(25,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(27,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(36,9): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(37,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(37,12): error TS2551: Property '    ' does not exist on type '{ "   ": number; "a   b": string; "~!@#$%^&*()_+{}|:'<>?/.,`": number; }'. Did you mean '   '?
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(38,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(40,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithStringNamedPropertyOfIllegalCharacters.ts(49,12): error TS2551: Property '    ' does not exist on type '{ "   ": number; "a   b": string; "~!@#$%^&*()_+{}|:'<>?/.,`": number; }'. Did you mean '   '?


==== objectTypeWithStringNamedPropertyOfIllegalCharacters.ts (16 errors) ====
    class C {
        "   ": number;
        "a   b": string;
        "~!@#$%^&*()_+{}|:'<>?\/.,`": number;
        "a\a": number;
        static "a ": number
    }
    
    var c: C;
    var r = c["   "];
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c["    "];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
               ~~~~~~
!!! error TS2551: Property '    ' does not exist on type 'C'. Did you mean '   '?
    var r3 = c["a   b"];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    // BUG 817263
    var r4 = c["~!@#$%^&*()_+{}|:'<>?\/.,`"];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        "   ": number;
        "a   b": string;
        "~!@#$%^&*()_+{}|:'<>?\/.,`": number;
    }
    
    var i: I;
    var r = i["   "];
            ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2 = i["    "];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
               ~~~~~~
!!! error TS2551: Property '    ' does not exist on type 'I'. Did you mean '   '?
    var r3 = i["a   b"];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    // BUG 817263
    var r4 = i["~!@#$%^&*()_+{}|:'<>?\/.,`"];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    
    var a: {
        "   ": number;
        "a   b": string;
        "~!@#$%^&*()_+{}|:'<>?\/.,`": number;
    }
    
    var r = a["   "];
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r2 = a["    "];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
               ~~~~~~
!!! error TS2551: Property '    ' does not exist on type '{ "   ": number; "a   b": string; "~!@#$%^&*()_+{}|:'<>?/.,`": number; }'. Did you mean '   '?
    var r3 = a["a   b"];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    // BUG 817263
    var r4 = a["~!@#$%^&*()_+{}|:'<>?\/.,`"];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    var b = {
        "   ": 1,
        "a   b": "",
        "~!@#$%^&*()_+{}|:'<>?\/.,`": 1,
    }
    
    var r = b["   "];
    var r2 = b["    "];
               ~~~~~~
!!! error TS2551: Property '    ' does not exist on type '{ "   ": number; "a   b": string; "~!@#$%^&*()_+{}|:'<>?/.,`": number; }'. Did you mean '   '?
    var r3 = b["a   b"];
    // BUG 817263
    var r4 = b["~!@#$%^&*()_+{}|:'<>?\/.,`"];
    